# mpz_rpc

./: CMakeLists.txt  README.md
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mpzrpcapplication.h  mpzrpcchannel.h  rpcheader.pb.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mpzrpcapplication.cc  mpzrpcchannel.cc  mpzrpcconfig.cc  mpzrpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: mpzrpcapplication.h  mpzrpcchannel.h  mpzrpcconfig.h  mpzrpccontroller.h  rpcprovider.h  zookeeperutil.h
test/: main.cc  test.out  test.pb.cc  test.pb.h  test.proto
